[gd_scene load_steps=9 format=3 uid="uid://d3tbkwfpnx1cy"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_a2yu2"]
[ext_resource type="Texture2D" uid="uid://dktfb7kbi3tbo" path="res://assets/2d-topdown-car/CARS/Sport/sport_yellow.png" id="1_lm8op"]
[ext_resource type="AudioStream" uid="uid://cx6rfxqimpnla" path="res://sound/car-driving.wav" id="3_6ick7"]
[ext_resource type="AudioStream" uid="uid://b221sikajhi5e" path="res://sound/car-break.wav" id="4_ewn31"]
[ext_resource type="AudioStream" uid="uid://dj8ug0w3tby2o" path="res://sound/bat-bite.wav" id="5_vgsqv"]
[ext_resource type="AudioStream" uid="uid://dlbrqh24lrr2c" path="res://sound/car-door.wav" id="6_qvij0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btcke"]
size = Vector2(31, 71)

[sub_resource type="CircleShape2D" id="CircleShape2D_0fmpw"]
radius = 38.5608

[node name="player" type="CharacterBody2D"]
scale = Vector2(0.209192, 0.20221)
collision_layer = 3
script = ExtResource("1_a2yu2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_btcke")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_lm8op")

[node name="DrivingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6ick7")
volume_db = 0.2

[node name="BrakeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ewn31")

[node name="BatBite" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vgsqv")
volume_db = 1.0

[node name="PickedUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qvij0")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="PlayerHit_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHit_Area"]
shape = SubResource("CircleShape2D_0fmpw")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="PlayerHit_Area" to="." method="_on_player_hit_area_body_entered"]
[connection signal="body_exited" from="PlayerHit_Area" to="." method="_on_player_hit_area_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
